chore(REQ-4): 更新构建配置和模组依赖喵~
 - 调整 CI 工作流 JDK 版本为 17，distribution 切换为 liberica 喵~
 - 升级 cold_sweat 模组依赖至 2.4 版本喵~
 - 更新模组版本号为 1.2.12 喵~
 - 调整 mods.toml 中 cold_sweat 版本范围为 [2.4, 3) 喵~
 - 添加 QWEN.md 智能助手规范配置喵~